파일구조화

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       </p>
     </header>
 
-    <form class="login-form">
+    <form action="frends.html" method="GET" class="login-form">
       <input
         class="login-form__need-animation"
         type="text"
