9/10 프런트엔드 뼈대 완성

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       />
       <input
         class="login-form__need-animation"
-        type="text"
+        type="password"
         placeholder="비밀번호를 입력해주세요"
       />
       <input class="login-form__pointer" type="submit" value="로그인" />
@@ -55,6 +55,16 @@
       <div class="splach-screen__logo-img">
         <img src="C:\Project\kokoa-clone-project\Design file\logo.png" />
       </div>
+    </div>
+    <div id="no-mobile-mobile">
+      <span
+        >세로화면에 최적화 되어 있습니다.<br /><br />화면을 세로로
+        돌려주세요ㅠㅠ</span
+      >
+    </div>
+
+    <div id="no-mobile-strong">
+      <span>화면 가로크기 줄여</span>
     </div>
 
     <script
