--- a/frends.html
+++ b/frends.html
@@ -8,7 +8,7 @@
     />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>친구</title>
+    <title>코카인톡-로그인</title>
   </head>
 
   <body>
@@ -25,103 +25,6 @@
         <i class="fas fa-battery-three-quarters fa-lg"></i>
         <i class="fas fa-exclamation"></i>
       </div>
-    </div>
-
-    <header class="screen-header">
-      <h1 class="screen-header__title">Friends</h1>
-      <div class="screen-header__icons">
-        <span><i class="fas fa-search fa-lg"></i></span>
-        <span><i class="fas fa-music fa-lg"></i></span>
-        <span
-          ><a href="settings.html"><i class="fas fa-cog fa-lg"></i></a
-        ></span>
-      </div>
-    </header>
-
-    <a class="friends-display-link">
-      <i class="fas fa-info-circle fa-lg"></i>Friends' Names Display
-      <i class="fas fa-chevron-right fa-xs"></i>
-    </a>
-
-    <main class="friends-screen">
-      <div class="user-component">
-        <div class="user-component__column">
-          <img
-            class="user-component__avatar user-component__avatar--xl"
-            src="C:\Project\kokoa-clone-project\Annotation 2020-09-10 054609.png"
-          />
-          <div class="user-component__text">
-            <h4 class="user-component__title">원재현</h4>
-            <h6 class="user-component__subtitle">
-              주소: 독일 펜실베이니아 서울2동
-            </h6>
-          </div>
-        </div>
-        <div class="user-component__column"></div>
-      </div>
-      <div class="friends-screen__channel">
-        <div class="friends-screen__channel-header">
-          <span>Channel</span>
-          <i class="fas fa-chevron-up fa-xs"></i>
-        </div>
-        <div class="user-component">
-          <div class="user-component__column">
-            <img
-              class="user-component__avatar user-component__avatar--sm"
-              src="C:\Project\kokoa-clone-project\Design file\kakao.png"
-            />
-            <div class="user-component__text">
-              <h4 class="user-component__title--not-bold">Channel</h4>
-            </div>
-          </div>
-          <div class="user-component__column">
-            <div><span>2</span> <i class="fas fa-chevron-right fa-xs"></i></div>
-          </div>
-        </div>
-      </div>
-    </main>
-
-    <a class="side-logo__a" href="index.html">
-      <img
-        class="side-logo__img"
-        src="C:\Project\kokoa-clone-project\Design file\main-logo.png"
-      />
-    </a>
-
-    <nav class="nav">
-      <ul class="nav__list">
-        <li class="nav__btn">
-          <a class="nav__link" href="frends.html"
-            ><i class="fas fa-user fa-2x"></i
-          ></a>
-        </li>
-        <li class="nav__btn">
-          <a class="nav__link" href="chats.html">
-            <span class="nav__notification">1</span>
-            <i class="far fa-comment fa-2x"></i
-          ></a>
-        </li>
-        <li class="nav__btn">
-          <a class="nav__link" href="hash.html"
-            ><i class="fas fa-hashtag fa-2x"></i
-          ></a>
-        </li>
-        <li class="nav__btn">
-          <a class="nav__link" href="more.html"
-            ><div class="nav__dot"></div>
-            <i class="fas fa-ellipsis-h fa-2x"></i
-          ></a>
-        </li>
-      </ul>
-    </nav>
-    <div id="no-mobile-mobile">
-      <span
-        >세로화면에 최적화 되어 있습니다.<br /><br />화면을 세로로
-        돌려주세요ㅠㅠ</span
-      >
-    </div>
-    <div id="no-mobile-strong">
-      <span>화면 가로크기 줄여</span>
     </div>
 
     <script
