--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
 
     <div class="splach-screen">
       <div class="splach-screen__logo-img">
-        <img src="C:\Project\kokoa-clone-project\Design file\logo.png" />
+        <img
+          src="https://github.com/cloe001000/kokoa-clone-project/blob/gh-pages/Design%20file/logo.png?raw=true"
+        />
       </div>
     </div>
     <div id="no-mobile-mobile">
