all-local-img-to-public

--- a/chats.html
+++ b/chats.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="css/main.css" />
     <link
       rel="shortsut icon"
-      href="C:\Project\kokoa-clone-project\Design file\originalLOGO_file.png"
+      href="https://github.com/cloe001000/kokoa-clone-project/blob/gh-pages/Design%20file/originalLOGO_file.png?raw=true"
     />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -45,7 +45,7 @@
           <div class="user-component__column">
             <img
               class="user-component__avatar"
-              src="C:\Project\kokoa-clone-project\smage.jpg"
+              src="https://github.com/cloe001000/kokoa-clone-project/blob/gh-pages/smage.jpg?raw=true"
             />
             <div class="user-component__text">
               <h4 class="user-component__title">삼계탕</h4>
@@ -62,7 +62,7 @@
           <div class="user-component__column">
             <img
               class="user-component__avatar"
-              src="C:\Project\kokoa-clone-project\lal.jpg"
+              src="https://github.com/cloe001000/kokoa-clone-project/blob/gh-pages/lal.jpg?raw=true"
             />
             <div class="user-component__text">
               <h4 class="user-component__title">정후</h4>
@@ -79,7 +79,7 @@
           <div class="user-component__column">
             <img
               class="user-component__avatar"
-              src="C:\Project\kokoa-clone-project\sugin.jpg"
+              src="https://github.com/cloe001000/kokoa-clone-project/blob/gh-pages/sugin.jpg?raw=true"
             />
             <div class="user-component__text">
               <h4 class="user-component__title">수진</h4>
@@ -96,7 +96,7 @@
           <div class="user-component__column">
             <img
               class="user-component__avatar"
-              src="C:\Project\kokoa-clone-project\bh.jpg"
+              src="https://github.com/cloe001000/kokoa-clone-project/blob/gh-pages/bh.jpg?raw=true"
             />
             <div class="user-component__text">
               <h4 class="user-component__title">병호</h4>
@@ -114,7 +114,7 @@
           <div class="user-component__column">
             <img
               class="user-component__avatar"
-              src="C:\Project\kokoa-clone-project\unnamed.png"
+              src="https://github.com/cloe001000/kokoa-clone-project/blob/gh-pages/unnamed.png?raw=true"
             />
             <div class="user-component__text">
               <h4 class="user-component__title">Anonymous</h4>
@@ -134,7 +134,7 @@
           <div class="user-component__column">
             <img
               class="user-component__avatar"
-              src="C:\Project\kokoa-clone-project\insu.jpg"
+              src="https://github.com/cloe001000/kokoa-clone-project/blob/gh-pages/insu.jpg?raw=true"
             />
             <div class="user-component__text">
               <h4 class="user-component__title">인수</h4>
@@ -152,7 +152,7 @@
           <div class="user-component__column">
             <img
               class="user-component__avatar"
-              src="C:\Project\kokoa-clone-project\gil.jpg"
+              src="https://github.com/cloe001000/kokoa-clone-project/blob/gh-pages/gil.jpg?raw=true"
             />
             <div class="user-component__text">
               <h4 class="user-component__title">민경</h4>
@@ -196,7 +196,7 @@
     <div class="side-logo__a" href="index.html">
       <img
         class="side-logo__img side-logo__div"
-        src="C:\Project\kokoa-clone-project\Design file\main-logo.png"
+        src="https://github.com/cloe001000/kokoa-clone-project/blob/gh-pages/Design%20file/main-logo.png?raw=true"
       />
     </div>
     <div id="no-mobile-mobile">
