--- a/chatting-anonymous.html
+++ b/chatting-anonymous.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="css/main.css" />
     <link
       rel="shortsut icon"
-      href="C:\Project\kokoa-clone-project\Design file\originalLOGO_file.png"
+      href="https://github.com/cloe001000/kokoa-clone-project/blob/gh-pages/Design%20file/originalLOGO_file.png?raw=true"
     />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -51,7 +51,7 @@
 
       <div class="maeeage-row">
         <!-- 프로필 사진 -->
-        <img src="C:\Project\kokoa-clone-project\unnamed.png" />
+        <img src="https://github.com/cloe001000/kokoa-clone-project/blob/gh-pages/unnamed.png?raw=true" />
         <!-- 프로필 사진 -->
         <div class="message-row__content">
           <span class="massege__author">정후</span>
@@ -80,7 +80,7 @@
       </div>
       <div class="maeeage-row">
         <!-- 프로필 사진 -->
-        <img src="C:\Project\kokoa-clone-project\unnamed.png" />
+        <img src="https://github.com/cloe001000/kokoa-clone-project/blob/gh-pages/unnamed.png?raw=true" />
         <!-- 프로필 사진 -->
         <div class="message-row__content">
           <span class="massege__author">정후</span>
@@ -108,7 +108,7 @@
       </div>
       <div class="maeeage-row">
         <!-- 프로필 사진 -->
-        <img src="C:\Project\kokoa-clone-project\unnamed.png" />
+        <img src="https://github.com/cloe001000/kokoa-clone-project/blob/gh-pages/unnamed.png?raw=true" />
         <!-- 프로필 사진 -->
         <div class="message-row__content">
           <span class="massege__author">정후</span>
@@ -144,7 +144,7 @@
       </div>
       <div class="maeeage-row">
         <!-- 프로필 사진 -->
-        <img src="C:\Project\kokoa-clone-project\unnamed.png" />
+        <img src="https://github.com/cloe001000/kokoa-clone-project/blob/gh-pages/unnamed.png?raw=true" />
         <!-- 프로필 사진 -->
         <div class="message-row__content">
           <span class="massege__author">정후</span>
