--- a/chatting-insu.html
+++ b/chatting-insu.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="css/main.css" />
     <link
       rel="shortsut icon"
-      href="C:\Project\kokoa-clone-project\Design file\originalLOGO_file.png"
+      href="https://github.com/cloe001000/kokoa-clone-project/blob/gh-pages/Design%20file/originalLOGO_file.png?raw=true"
     />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -51,7 +51,7 @@
 
       <div class="maeeage-row">
         <!-- 프로필 사진 -->
-        <img src="C:\Project\kokoa-clone-project\insu.jpg" />
+        <img src="https://github.com/cloe001000/kokoa-clone-project/blob/gh-pages/insu.jpg?raw=true" />
         <!-- 프로필 사진 -->
         <div class="message-row__content">
           <span class="massege__author">인수</span>
@@ -63,7 +63,7 @@
       </div>
       <div class="maeeage-row">
         <!-- 프로필 사진 -->
-        <img src="C:\Project\kokoa-clone-project\insu.jpg" />
+        <img src="https://github.com/cloe001000/kokoa-clone-project/blob/gh-pages/insu.jpg?raw=true" />
         <!-- 프로필 사진 -->
         <div class="message-row__content">
           <span class="massege__author">인수</span>
@@ -75,7 +75,7 @@
       </div>
       <div class="maeeage-row">
         <!-- 프로필 사진 -->
-        <img src="C:\Project\kokoa-clone-project\insu.jpg" />
+        <img src="https://github.com/cloe001000/kokoa-clone-project/blob/gh-pages/insu.jpg?raw=true" />
         <!-- 프로필 사진 -->
         <div class="message-row__content">
           <span class="massege__author">인수</span>
@@ -87,7 +87,7 @@
       </div>
       <div class="maeeage-row">
         <!-- 프로필 사진 -->
-        <img src="C:\Project\kokoa-clone-project\insu.jpg" />
+        <img src="https://github.com/cloe001000/kokoa-clone-project/blob/gh-pages/insu.jpg?raw=true" />
         <!-- 프로필 사진 -->
         <div class="message-row__content">
           <span class="massege__author">인수</span>
@@ -99,7 +99,7 @@
       </div>
       <div class="maeeage-row">
         <!-- 프로필 사진 -->
-        <img src="C:\Project\kokoa-clone-project\insu.jpg" />
+        <img src="https://github.com/cloe001000/kokoa-clone-project/blob/gh-pages/insu.jpg?raw=true" />
         <!-- 프로필 사진 -->
         <div class="message-row__content">
           <span class="massege__author">인수</span>
@@ -112,7 +112,7 @@
       </div>
       <div class="maeeage-row">
         <!-- 프로필 사진 -->
-        <img src="C:\Project\kokoa-clone-project\insu.jpg" />
+        <img src="https://github.com/cloe001000/kokoa-clone-project/blob/gh-pages/insu.jpg?raw=true" />
         <!-- 프로필 사진 -->
         <div class="message-row__content">
           <span class="massege__author">인수</span>
@@ -125,7 +125,7 @@
       </div>
       <div class="maeeage-row">
         <!-- 프로필 사진 -->
-        <img src="C:\Project\kokoa-clone-project\insu.jpg" />
+        <img src="https://github.com/cloe001000/kokoa-clone-project/blob/gh-pages/insu.jpg?raw=true" />
         <!-- 프로필 사진 -->
         <div class="message-row__content">
           <span class="massege__author">인수</span>
@@ -138,7 +138,7 @@
       </div>
       <div class="maeeage-row">
         <!-- 프로필 사진 -->
-        <img src="C:\Project\kokoa-clone-project\insu.jpg" />
+        <img src="https://github.com/cloe001000/kokoa-clone-project/blob/gh-pages/insu.jpg?raw=true" />
         <!-- 프로필 사진 -->
         <div class="message-row__content">
           <span class="massege__author">인수</span>
@@ -168,7 +168,7 @@
       </div>
       <div class="maeeage-row">
         <!-- 프로필 사진 -->
-        <img src="C:\Project\kokoa-clone-project\insu.jpg" />
+        <img src="https://github.com/cloe001000/kokoa-clone-project/blob/gh-pages/insu.jpg?raw=true" />
         <!-- 프로필 사진 -->
         <div class="message-row__content">
           <span class="massege__author">인수</span>
@@ -181,7 +181,7 @@
       </div>
       <div class="maeeage-row">
         <!-- 프로필 사진 -->
-        <img src="C:\Project\kokoa-clone-project\insu.jpg" />
+        <img src="https://github.com/cloe001000/kokoa-clone-project/blob/gh-pages/insu.jpg?raw=true" />
         <!-- 프로필 사진 -->
         <div class="message-row__content">
           <span class="massege__author">인수</span>
