--- a/frends.html
+++ b/frends.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="css/main.css" />
     <link
       rel="shortsut icon"
-      href="C:\Project\kokoa-clone-project\Design file\originalLOGO_file.png"
+      href="https://github.com/cloe001000/kokoa-clone-project/blob/gh-pages/Design%20file/originalLOGO_file.png?raw=true"
     />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -48,7 +48,7 @@
         <div class="user-component__column">
           <img
             class="user-component__avatar user-component__avatar--xl"
-            src="C:\Project\kokoa-clone-project\Annotation 2020-09-10 054609.png"
+            src="https://github.com/cloe001000/kokoa-clone-project/blob/gh-pages/Annotation%202020-09-10%20054609.png?raw=true"
           />
           <div class="user-component__text">
             <h4 class="user-component__title">원재현</h4>
@@ -84,7 +84,7 @@
     <a class="side-logo__a" href="index.html">
       <img
         class="side-logo__img"
-        src="C:\Project\kokoa-clone-project\Design file\main-logo.png"
+        src="https://github.com/cloe001000/kokoa-clone-project/blob/gh-pages/Design%20file/main-logo.png?raw=true"
       />
     </a>
 
