--- a/settings.html
+++ b/settings.html
@@ -72,7 +72,7 @@
     <div class="side-logo__a" href="index.html">
       <img
         class="side-logo__img side-logo__div"
-        src="C:\Project\kokoa-clone-project\Design file\main-logo.png"
+        src="https://github.com/cloe001000/kokoa-clone-project/blob/gh-pages/Design%20file/main-logo.png?raw=true"
       />
     </div>
 
