--- a/chatting-bh.html
+++ b/chatting-bh.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="css/main.css" />
     <link
       rel="shortsut icon"
-      href="C:\Project\kokoa-clone-project\Design file\originalLOGO_file.png"
+      href="https://github.com/cloe001000/kokoa-clone-project/blob/gh-pages/Design%20file/originalLOGO_file.png?raw=true"
     />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -60,7 +60,7 @@
 
       <div class="maeeage-row">
         <!-- 프로필 사진 -->
-        <img src="C:\Project\kokoa-clone-project\bh.jpg" />
+        <img src="https://github.com/cloe001000/kokoa-clone-project/blob/gh-pages/bh.jpg?raw=true" />
         <!-- 프로필 사진 -->
         <div class="message-row__content">
           <span class="massege__author">병호</span>
@@ -97,7 +97,7 @@
 
       <div class="maeeage-row">
         <!-- 프로필 사진 -->
-        <img src="C:\Project\kokoa-clone-project\bh.jpg" />
+        <img src="https://github.com/cloe001000/kokoa-clone-project/blob/gh-pages/bh.jpg?raw=true" />
         <!-- 프로필 사진 -->
         <div class="message-row__content">
           <span class="massege__author">병호</span>
@@ -109,7 +109,7 @@
       </div>
       <div class="maeeage-row">
         <!-- 프로필 사진 -->
-        <img src="C:\Project\kokoa-clone-project\bh.jpg" />
+        <img src="https://github.com/cloe001000/kokoa-clone-project/blob/gh-pages/bh.jpg?raw=true" />
         <!-- 프로필 사진 -->
         <div class="message-row__content">
           <span class="massege__author">병호</span>
@@ -121,7 +121,7 @@
       </div>
       <div class="maeeage-row">
         <!-- 프로필 사진 -->
-        <img src="C:\Project\kokoa-clone-project\bh.jpg" />
+        <img src="https://github.com/cloe001000/kokoa-clone-project/blob/gh-pages/bh.jpg?raw=true" />
         <!-- 프로필 사진 -->
         <div class="message-row__content">
           <span class="massege__author">병호</span>
