--- a/chatting-gill.html
+++ b/chatting-gill.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="css/main.css" />
     <link
       rel="shortsut icon"
-      href="C:\Project\kokoa-clone-project\Design file\originalLOGO_file.png"
+      href="https://github.com/cloe001000/kokoa-clone-project/blob/gh-pages/Design%20file/originalLOGO_file.png?raw=true"
     />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -51,7 +51,7 @@
 
       <div class="maeeage-row">
         <!-- 프로필 사진 -->
-        <img src="C:\Project\kokoa-clone-project\gil.jpg" />
+        <img src="https://github.com/cloe001000/kokoa-clone-project/blob/gh-pages/gil.jpg?raw=true" />
         <!-- 프로필 사진 -->
         <div class="message-row__content">
           <span class="massege__author">민경</span>
@@ -72,7 +72,7 @@
       </div>
       <div class="maeeage-row">
         <!-- 프로필 사진 -->
-        <img src="C:\Project\kokoa-clone-project\gil.jpg" />
+        <img src="https://github.com/cloe001000/kokoa-clone-project/blob/gh-pages/gil.jpg?raw=true" />
         <!-- 프로필 사진 -->
         <div class="message-row__content">
           <span class="massege__author">민경</span>
@@ -101,7 +101,7 @@
       </div>
       <div class="maeeage-row">
         <!-- 프로필 사진 -->
-        <img src="C:\Project\kokoa-clone-project\gil.jpg" />
+        <img src="https://github.com/cloe001000/kokoa-clone-project/blob/gh-pages/gil.jpg?raw=true" />
         <!-- 프로필 사진 -->
         <div class="message-row__content">
           <span class="massege__author">민경</span>
@@ -131,7 +131,7 @@
       </div>
       <div class="maeeage-row">
         <!-- 프로필 사진 -->
-        <img src="C:\Project\kokoa-clone-project\gil.jpg" />
+        <img src="https://github.com/cloe001000/kokoa-clone-project/blob/gh-pages/gil.jpg?raw=true" />
         <!-- 프로필 사진 -->
         <div class="message-row__content">
           <span class="massege__author">민경</span>
