--- a/hash.html
+++ b/hash.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="css/main.css" />
     <link
       rel="shortsut icon"
-      href="C:\Project\kokoa-clone-project\Design file\originalLOGO_file.png"
+      href="https://github.com/cloe001000/kokoa-clone-project/blob/gh-pages/Design%20file/originalLOGO_file.png?raw=true"
     />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -115,7 +115,7 @@
     <div class="side-logo__a" href="index.html">
       <img
         class="side-logo__img side-logo__div"
-        src="C:\Project\kokoa-clone-project\Design file\main-logo.png"
+        src="https://github.com/cloe001000/kokoa-clone-project/blob/gh-pages/Design%20file/main-logo.png?raw=true"
       />
     </div>
 
