정말모든것이퍼블릭으로

--- a/frends.html
+++ b/frends.html
@@ -68,7 +68,7 @@
           <div class="user-component__column">
             <img
               class="user-component__avatar user-component__avatar--sm"
-              src="C:\Project\kokoa-clone-project\Design file\kakao.png"
+              src="https://github.com/cloe001000/kokoa-clone-project/blob/gh-pages/Design%20file/kakao.png?raw=true"
             />
             <div class="user-component__text">
               <h4 class="user-component__title--not-bold">Channel</h4>
