--- a/chatting-sugin.html
+++ b/chatting-sugin.html
@@ -75,7 +75,7 @@
 
     <div class="maeeage-row">
       <!-- 프로필 사진 -->
-      <img src="https://github.com/cloe001000/kokoa-clone-project/blob/gh-pages/sugin.jpg?raw=true" />
+      <img src="https://github.com/cloe001000/kokoa-clone-project/blob/gh-pages/sugin.png?raw=true" />
       <!-- 프로필 사진 -->
       <div class="message-row__content">
         <span class="massege__author">수진</span>
@@ -101,7 +101,7 @@
 
     <div class="maeeage-row">
       <!-- 프로필 사진 -->
-      <img src="https://github.com/cloe001000/kokoa-clone-project/blob/gh-pages/sugin.jpg?raw=true" />
+      <img src="https://github.com/cloe001000/kokoa-clone-project/blob/gh-pages/sugin.png?raw=true" />
       <!-- 프로필 사진 -->
       <div class="message-row__content">
         <span class="massege__author">수진</span>
