--- a/chats.html
+++ b/chats.html
@@ -1,217 +1,189 @@
 <!DOCTYPE html>
 <html lang="kr">
-  <head>
-    <link rel="stylesheet" href="css/main.css" />
-    <link
-      rel="shortsut icon"
-      href="https://github.com/cloe001000/kokoa-clone-project/blob/gh-pages/Design%20file/originalLOGO_file.png?raw=true"
-    />
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>채팅</title>
-  </head>
 
-  <body>
-    <div class="status-bar">
-      <div class="status-bar__column">
-        <span>Space Internet</span>
-        <i class="fas fa-satellite"></i>
-      </div>
-      <div class="status-bar__column">
-        <span>17:24</span>
-      </div>
-      <div class="status-bar__column">
-        <span>2762%</span>
-        <i class="fas fa-battery-three-quarters fa-lg"></i>
-        <i class="fas fa-exclamation"></i>
-      </div>
+<head>
+  <link rel="stylesheet" href="css/main.css" />
+  <link rel="shortsut icon"
+    href="https://github.com/cloe001000/kokoa-clone-project/blob/gh-pages/Design%20file/originalLOGO_file.png?raw=true" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>채팅</title>
+</head>
+
+<body>
+  <div class="status-bar">
+    <div class="status-bar__column">
+      <span>Space Internet</span>
+      <i class="fas fa-satellite"></i>
     </div>
+    <div class="status-bar__column">
+      <span>17:24</span>
+    </div>
+    <div class="status-bar__column">
+      <span>2762%</span>
+      <i class="fas fa-battery-three-quarters fa-lg"></i>
+      <i class="fas fa-exclamation"></i>
+    </div>
+  </div>
 
-    <header class="screen-header screen-header-chats">
-      <h1 class="screen-header__title">Chats</h1>
-      <div class="screen-header__icons">
-        <span><i class="fas fa-search fa-lg"></i></span>
-        <span><i class="far fa-comment-dots fa-lg"></i></span>
-        <span><i class="fas fa-music fa-lg"></i></span>
-        <span
-          ><a href="settings.html"><i class="fas fa-cog fa-lg"></i></a
-        ></span>
+  <header class="screen-header screen-header-chats">
+    <h1 class="screen-header__title">Chats</h1>
+    <div class="screen-header__icons">
+      <span><i class="fas fa-search fa-lg"></i></span>
+      <span><i class="far fa-comment-dots fa-lg"></i></span>
+      <span><i class="fas fa-music fa-lg"></i></span>
+      <span><a href="settings.html"><i class="fas fa-cog fa-lg"></i></a></span>
+    </div>
+  </header>
+
+  <main class="main-screen">
+    <a class="main-ancr" href="chatting-samge.html">
+      <div class="user-component">
+        <div class="user-component__column">
+          <img class="user-component__avatar"
+            src="https://github.com/cloe001000/kokoa-clone-project/blob/gh-pages/smage.jpg?raw=true" />
+          <div class="user-component__text">
+            <h4 class="user-component__title">삼계탕</h4>
+            <h6 class="user-component__subtitle">헐</h6>
+          </div>
+        </div>
+        <div class="user-component__column">
+          <span class="user-component__time">18:07</span>
+        </div>
       </div>
-    </header>
+    </a>
+    <a class="main-ancr" href="chatting-junghu.html">
+      <div class="user-component">
+        <div class="user-component__column">
+          <img class="user-component__avatar"
+            src="https://github.com/cloe001000/kokoa-clone-project/blob/gh-pages/lal.jpg?raw=true" />
+          <div class="user-component__text">
+            <h4 class="user-component__title">정후</h4>
+            <h6 class="user-component__subtitle">근데 너 누구야?</h6>
+          </div>
+        </div>
+        <div class="user-component__column">
+          <span class="user-component__time">23:51</span>
+        </div>
+      </div>
+    </a>
+    <a class="main-ancr" href="chatting-sugin.html">
+      <div class="user-component">
+        <div class="user-component__column">
+          <img class="user-component__avatar"
+            src="https://github.com/cloe001000/kokoa-clone-project/blob/gh-pages/sugin.png?raw=true" />
+          <div class="user-component__text">
+            <h4 class="user-component__title">수진</h4>
+            <h6 class="user-component__subtitle">아라써이~~</h6>
+          </div>
+        </div>
+        <div class="user-component__column">
+          <span class="user-component__time">11:30</span>
+        </div>
+      </div>
+    </a>
+    <a class="main-ancr" href="chatting-bh.html">
+      <div class="user-component">
+        <div class="user-component__column">
+          <img class="user-component__avatar"
+            src="https://github.com/cloe001000/kokoa-clone-project/blob/gh-pages/bh.jpg?raw=true" />
+          <div class="user-component__text">
+            <h4 class="user-component__title">병호</h4>
+            <h6 class="user-component__subtitle">미안해요</h6>
+          </div>
+        </div>
+        <div class="user-component__column">
+          <span class="user-component__time">18.26</span>
+          <div class="user-component__column__badge">3</div>
+        </div>
+      </div>
+    </a>
+    <a class="main-ancr" href="chatting-anonymous.html">
+      <div class="user-component">
+        <div class="user-component__column">
+          <img class="user-component__avatar"
+            src="https://github.com/cloe001000/kokoa-clone-project/blob/gh-pages/unnamed.png?raw=true" />
+          <div class="user-component__text">
+            <h4 class="user-component__title">Anonymous</h4>
+            <h6 class="user-component__subtitle">
+              우리는 끝까지 너를 추적할 것이다.
+            </h6>
+          </div>
+        </div>
+        <div class="user-component__column">
+          <span class="user-component__time">00:00</span>
+          <div class="user-component__column__badge">2</div>
+        </div>
+      </div>
+    </a>
+    <a class="main-ancr" href="chatting-insu.html">
+      <div class="user-component">
+        <div class="user-component__column">
+          <img class="user-component__avatar"
+            src="https://github.com/cloe001000/kokoa-clone-project/blob/gh-pages/insu.jpg?raw=true" />
+          <div class="user-component__text">
+            <h4 class="user-component__title">인수</h4>
+            <h6 class="user-component__subtitle">ㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋ</h6>
+          </div>
+        </div>
+        <div class="user-component__column">
+          <span class="user-component__time">01:30</span>
+          <div class="user-component__column__badge">1</div>
+        </div>
+      </div>
+    </a>
+    <a class="main-ancr" href="chatting-gill.html">
+      <div class="user-component">
+        <div class="user-component__column">
+          <img class="user-component__avatar"
+            src="https://github.com/cloe001000/kokoa-clone-project/blob/gh-pages/gil.jpg?raw=true" />
+          <div class="user-component__text">
+            <h4 class="user-component__title">민경</h4>
+            <h6 class="user-component__subtitle">그만 대화를 멈추자</h6>
+          </div>
+        </div>
+        <div class="user-component__column">
+          <span class="user-component__time">05:19</span>
+        </div>
+      </div>
+    </a>
+  </main>
 
-    <main class="main-screen">
-      <a class="main-ancr" href="chatting-samge.html">
-        <div class="user-component">
-          <div class="user-component__column">
-            <img
-              class="user-component__avatar"
-              src="https://github.com/cloe001000/kokoa-clone-project/blob/gh-pages/smage.jpg?raw=true"
-            />
-            <div class="user-component__text">
-              <h4 class="user-component__title">삼계탕</h4>
-              <h6 class="user-component__subtitle">헐</h6>
-            </div>
-          </div>
-          <div class="user-component__column">
-            <span class="user-component__time">18:07</span>
-          </div>
-        </div>
-      </a>
-      <a class="main-ancr" href="chatting-junghu.html">
-        <div class="user-component">
-          <div class="user-component__column">
-            <img
-              class="user-component__avatar"
-              src="https://github.com/cloe001000/kokoa-clone-project/blob/gh-pages/lal.jpg?raw=true"
-            />
-            <div class="user-component__text">
-              <h4 class="user-component__title">정후</h4>
-              <h6 class="user-component__subtitle">근데 너 누구야?</h6>
-            </div>
-          </div>
-          <div class="user-component__column">
-            <span class="user-component__time">23:51</span>
-          </div>
-        </div>
-      </a>
-      <a class="main-ancr" href="chatting-sugin.html">
-        <div class="user-component">
-          <div class="user-component__column">
-            <img
-              class="user-component__avatar"
-              src="https://github.com/cloe001000/kokoa-clone-project/blob/gh-pages/sugin.jpg?raw=true"
-            />
-            <div class="user-component__text">
-              <h4 class="user-component__title">수진</h4>
-              <h6 class="user-component__subtitle">아라써이~~</h6>
-            </div>
-          </div>
-          <div class="user-component__column">
-            <span class="user-component__time">11:30</span>
-          </div>
-        </div>
-      </a>
-      <a class="main-ancr" href="chatting-bh.html">
-        <div class="user-component">
-          <div class="user-component__column">
-            <img
-              class="user-component__avatar"
-              src="https://github.com/cloe001000/kokoa-clone-project/blob/gh-pages/bh.jpg?raw=true"
-            />
-            <div class="user-component__text">
-              <h4 class="user-component__title">병호</h4>
-              <h6 class="user-component__subtitle">미안해요</h6>
-            </div>
-          </div>
-          <div class="user-component__column">
-            <span class="user-component__time">18.26</span>
-            <div class="user-component__column__badge">3</div>
-          </div>
-        </div>
-      </a>
-      <a class="main-ancr" href="chatting-anonymous.html">
-        <div class="user-component">
-          <div class="user-component__column">
-            <img
-              class="user-component__avatar"
-              src="https://github.com/cloe001000/kokoa-clone-project/blob/gh-pages/unnamed.png?raw=true"
-            />
-            <div class="user-component__text">
-              <h4 class="user-component__title">Anonymous</h4>
-              <h6 class="user-component__subtitle">
-                우리는 끝까지 너를 추적할 것이다.
-              </h6>
-            </div>
-          </div>
-          <div class="user-component__column">
-            <span class="user-component__time">00:00</span>
-            <div class="user-component__column__badge">2</div>
-          </div>
-        </div>
-      </a>
-      <a class="main-ancr" href="chatting-insu.html">
-        <div class="user-component">
-          <div class="user-component__column">
-            <img
-              class="user-component__avatar"
-              src="https://github.com/cloe001000/kokoa-clone-project/blob/gh-pages/insu.jpg?raw=true"
-            />
-            <div class="user-component__text">
-              <h4 class="user-component__title">인수</h4>
-              <h6 class="user-component__subtitle">ㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋ</h6>
-            </div>
-          </div>
-          <div class="user-component__column">
-            <span class="user-component__time">01:30</span>
-            <div class="user-component__column__badge">1</div>
-          </div>
-        </div>
-      </a>
-      <a class="main-ancr" href="chatting-gill.html">
-        <div class="user-component">
-          <div class="user-component__column">
-            <img
-              class="user-component__avatar"
-              src="https://github.com/cloe001000/kokoa-clone-project/blob/gh-pages/gil.jpg?raw=true"
-            />
-            <div class="user-component__text">
-              <h4 class="user-component__title">민경</h4>
-              <h6 class="user-component__subtitle">그만 대화를 멈추자</h6>
-            </div>
-          </div>
-          <div class="user-component__column">
-            <span class="user-component__time">05:19</span>
-          </div>
-        </div>
-      </a>
-    </main>
+  <nav class="nav">
+    <ul class="nav__list">
+      <li class="nav__btn">
+        <a class="nav__link" href="frends.html"><i class="far fa-user fa-2x"></i></a>
+      </li>
+      <li class="nav__btn">
+        <a class="nav__link" href="chats.html">
+          <span class="nav__notification__chats">1</span>
+          <i class="fas fa-comment fa-2x"></i></a>
+      </li>
+      <li class="nav__btn">
+        <a class="nav__link" href="hash.html"><i class="fas fa-hashtag fa-2x"></i></a>
+      </li>
+      <li class="nav__btn">
+        <a class="nav__link" href="more.html">
+          <div class="nav__dot"></div>
+          <i class="fas fa-ellipsis-h fa-2x"></i>
+        </a>
+      </li>
+    </ul>
+  </nav>
 
-    <nav class="nav">
-      <ul class="nav__list">
-        <li class="nav__btn">
-          <a class="nav__link" href="frends.html"
-            ><i class="far fa-user fa-2x"></i
-          ></a>
-        </li>
-        <li class="nav__btn">
-          <a class="nav__link" href="chats.html">
-            <span class="nav__notification__chats">1</span>
-            <i class="fas fa-comment fa-2x"></i
-          ></a>
-        </li>
-        <li class="nav__btn">
-          <a class="nav__link" href="hash.html"
-            ><i class="fas fa-hashtag fa-2x"></i
-          ></a>
-        </li>
-        <li class="nav__btn">
-          <a class="nav__link" href="more.html"
-            ><div class="nav__dot"></div>
-            <i class="fas fa-ellipsis-h fa-2x"></i
-          ></a>
-        </li>
-      </ul>
-    </nav>
+  <div class="side-logo__a" href="index.html">
+    <img class="side-logo__img side-logo__div"
+      src="https://github.com/cloe001000/kokoa-clone-project/blob/gh-pages/Design%20file/main-logo.png?raw=true" />
+  </div>
+  <div id="no-mobile-mobile">
+    <span>세로화면에 최적화 되어 있습니다.<br /><br />화면을 세로로
+      돌려주세요ㅠㅠ</span>
+  </div>
+  <div id="no-mobile-strong">
+    <span>화면 가로크기 줄여</span>
+  </div>
 
-    <div class="side-logo__a" href="index.html">
-      <img
-        class="side-logo__img side-logo__div"
-        src="https://github.com/cloe001000/kokoa-clone-project/blob/gh-pages/Design%20file/main-logo.png?raw=true"
-      />
-    </div>
-    <div id="no-mobile-mobile">
-      <span
-        >세로화면에 최적화 되어 있습니다.<br /><br />화면을 세로로
-        돌려주세요ㅠㅠ</span
-      >
-    </div>
-    <div id="no-mobile-strong">
-      <span>화면 가로크기 줄여</span>
-    </div>
+  <script src="https://kit.fontawesome.com/a24ab77c03.js" crossorigin="anonymous"></script>
+</body>
 
-    <script
-      src="https://kit.fontawesome.com/a24ab77c03.js"
-      crossorigin="anonymous"
-    ></script>
-  </body>
 </html>
