--- a/chatting-junghu.html
+++ b/chatting-junghu.html
@@ -7,7 +7,7 @@
     href="https://github.com/cloe001000/kokoa-clone-project/blob/gh-pages/Design%20file/originalLOGO_file.png?raw=true" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>정후</title>
+  <title>옷장</title>
 </head>
 
 <body id="chat-screen">
@@ -53,7 +53,7 @@
       <img src="https://github.com/cloe001000/kokoa-clone-project/blob/gh-pages/lal.jpg?raw=true" />
       <!-- 프로필 사진 -->
       <div class="message-row__content">
-        <span class="massege__author">정후</span>
+        <span class="massege__author">옷장</span>
         <div class="message__info">
           <span class="massege__bubble">
             <!-- 메세지 -->어때 다 끝냈어?</span>
@@ -78,7 +78,7 @@
       <img src="https://github.com/cloe001000/kokoa-clone-project/blob/gh-pages/lal.jpg?raw=true" />
       <!-- 프로필 사진 -->
       <div class="message-row__content">
-        <span class="massege__author">정후</span>
+        <span class="massege__author">옷장</span>
         <div class="message__info">
           <span class="massege__bubble">
             <!-- 메세지 -->응앙일룰갈학르라으가르가</span>
@@ -102,7 +102,7 @@
       <img src="https://github.com/cloe001000/kokoa-clone-project/blob/gh-pages/lal.jpg?raw=true" />
       <!-- 프로필 사진 -->
       <div class="message-row__content">
-        <span class="massege__author">정후</span>
+        <span class="massege__author">옷장</span>
         <div class="message__info">
           <span class="massege__bubble">
             <!-- 메세지 -->쫌따 갈게</span>
@@ -127,7 +127,7 @@
       <img src="https://github.com/cloe001000/kokoa-clone-project/blob/gh-pages/lal.jpg?raw=true" />
       <!-- 프로필 사진 -->
       <div class="message-row__content">
-        <span class="massege__author">정후</span>
+        <span class="massege__author">옷장</span>
         <div class="message__info">
           <span class="massege__bubble">
             <!-- 메세지 -->근데 너 누구야?</span>
