--- a/chats.html
+++ b/chats.html
@@ -58,7 +58,7 @@
           <img class="user-component__avatar"
             src="https://github.com/cloe001000/kokoa-clone-project/blob/gh-pages/lal.jpg?raw=true" />
           <div class="user-component__text">
-            <h4 class="user-component__title">정후</h4>
+            <h4 class="user-component__title">옷장</h4>
             <h6 class="user-component__subtitle">근데 너 누구야?</h6>
           </div>
         </div>
