--- a/chats.html
+++ b/chats.html
@@ -73,7 +73,7 @@
           <img class="user-component__avatar"
             src="https://github.com/cloe001000/kokoa-clone-project/blob/gh-pages/sugin.png?raw=true" />
           <div class="user-component__text">
-            <h4 class="user-component__title">수진</h4>
+            <h4 class="user-component__title">밥솥</h4>
             <h6 class="user-component__subtitle">아라써이~~</h6>
           </div>
         </div>
@@ -88,7 +88,7 @@
           <img class="user-component__avatar"
             src="https://github.com/cloe001000/kokoa-clone-project/blob/gh-pages/bh.jpg?raw=true" />
           <div class="user-component__text">
-            <h4 class="user-component__title">병호</h4>
+            <h4 class="user-component__title">솔방울</h4>
             <h6 class="user-component__subtitle">미안해요</h6>
           </div>
         </div>
@@ -122,7 +122,7 @@
           <img class="user-component__avatar"
             src="https://github.com/cloe001000/kokoa-clone-project/blob/gh-pages/insu.jpg?raw=true" />
           <div class="user-component__text">
-            <h4 class="user-component__title">인수</h4>
+            <h4 class="user-component__title">대리석</h4>
             <h6 class="user-component__subtitle">ㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋ</h6>
           </div>
         </div>
@@ -138,7 +138,7 @@
           <img class="user-component__avatar"
             src="https://github.com/cloe001000/kokoa-clone-project/blob/gh-pages/gil.jpg?raw=true" />
           <div class="user-component__text">
-            <h4 class="user-component__title">민경</h4>
+            <h4 class="user-component__title">으으</h4>
             <h6 class="user-component__subtitle">그만 대화를 멈추자</h6>
           </div>
         </div>
