--- a/chatting-sugin.html
+++ b/chatting-sugin.html
@@ -7,7 +7,7 @@
     href="https://github.com/cloe001000/kokoa-clone-project/blob/gh-pages/Design%20file/originalLOGO_file.png?raw=true" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>수진</title>
+  <title>해파리</title>
 </head>
 
 <body id="chat-screen">
@@ -33,7 +33,7 @@
       </a>
     </div>
     <div class="alt-header__column alt-header__column-name">
-      <h1 class="alt-header__title">수진</h1>
+      <h1 class="alt-header__title">해파리</h1>
     </div>
     <div class="alt-header__column">
       <span><i class="fas fa-search fa-2x"></i></span>
@@ -53,7 +53,7 @@
       <img src="https://github.com/cloe001000/kokoa-clone-project/blob/gh-pages/sugin.png?raw=true" />
       <!-- 프로필 사진 -->
       <div class="message-row__content">
-        <span class="massege__author">수진</span>
+        <span class="massege__author">해파리</span>
         <div class="message__info">
           <span class="massege__bubble">
             <!-- 메세지 -->뭐라고 쓰지</span>
@@ -78,7 +78,7 @@
       <img src="https://github.com/cloe001000/kokoa-clone-project/blob/gh-pages/sugin.png?raw=true" />
       <!-- 프로필 사진 -->
       <div class="message-row__content">
-        <span class="massege__author">수진</span>
+        <span class="massege__author">해파리</span>
         <div class="message__info">
           <span class="massege__bubble">
             <!-- 메세지 -->너가 모르면 어떡해</span>
@@ -104,10 +104,10 @@
       <img src="https://github.com/cloe001000/kokoa-clone-project/blob/gh-pages/sugin.png?raw=true" />
       <!-- 프로필 사진 -->
       <div class="message-row__content">
-        <span class="massege__author">수진</span>
+        <span class="massege__author">해파리</span>
         <div class="message__info">
           <span class="massege__bubble">
-            <!-- 메세지 -->아라써이~~</span>
+            <!-- 메세지 -->해파라르리</span>
           <span class="massege__time">
             <!-- 보낸 시간 -->23:58</span>
         </div>
