--- a/chats.html
+++ b/chats.html
@@ -73,8 +73,8 @@
           <img class="user-component__avatar"
             src="https://github.com/cloe001000/kokoa-clone-project/blob/gh-pages/sugin.png?raw=true" />
           <div class="user-component__text">
-            <h4 class="user-component__title">밥솥</h4>
-            <h6 class="user-component__subtitle">아라써이~~</h6>
+            <h4 class="user-component__title">해파리</h4>
+            <h6 class="user-component__subtitle">해파라르리</h6>
           </div>
         </div>
         <div class="user-component__column">
@@ -139,7 +139,7 @@
             src="https://github.com/cloe001000/kokoa-clone-project/blob/gh-pages/gil.jpg?raw=true" />
           <div class="user-component__text">
             <h4 class="user-component__title">으으</h4>
-            <h6 class="user-component__subtitle">그만 대화를 멈추자</h6>
+            <h6 class="user-component__subtitle">평안하신지요</h6>
           </div>
         </div>
         <div class="user-component__column">
