--- a/chatting-bh.html
+++ b/chatting-bh.html
@@ -163,7 +163,7 @@
   </div>
   <div id="no-mobile-mobile">
     <span>세로화면에 최적화 되어 있습니다.<br /><br />화면을 세로로
-      돌려주세요ㅠㅠ</span>
+      돌려주세요ㅠㅠ<br><br>우측 하단 로고를 지속적으로 Hover하면..</span>
   </div>
 
   <script src="https://kit.fontawesome.com/a24ab77c03.js" crossorigin="anonymous"></script>
