--- a/index.html
+++ b/index.html
@@ -1,78 +1,63 @@
 <!DOCTYPE html>
 <html lang="kr">
-  <head>
-    <link rel="stylesheet" href="css/main.css" />
 
-    <link
-      rel="shortsut icon"
-      href="https://github.com/cloe001000/kokoa-clone-project/blob/gh-pages/Design%20file/originalLOGO_file.png?raw=true"
-    />
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>코카인톡-로그인</title>
-  </head>
+<head>
+  <link rel="stylesheet" href="css/main.css" />
 
-  <body>
-    <div class="status-bar">
-      <div class="status-bar__column">
-        <span>Space Internet</span>
-        <i class="fas fa-satellite"></i>
-      </div>
-      <div class="status-bar__column">
-        <span>17:24</span>
-      </div>
-      <div class="status-bar__column">
-        <span>2762%</span>
-        <i class="fas fa-battery-three-quarters fa-lg"></i>
-        <i class="fas fa-exclamation"></i>
-      </div>
+  <link rel="shortsut icon"
+    href="https://github.com/cloe001000/kokoa-clone-project/blob/gh-pages/Design%20file/originalLOGO_file.png?raw=true" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>코카인톡-로그인</title>
+</head>
+
+<body>
+  <div class="status-bar">
+    <div class="status-bar__column">
+      <span>Space Internet</span>
+      <i class="fas fa-satellite"></i>
     </div>
-
-    <header class="welcome-header">
-      <h1 class="welcome-header__title">코카인톡에 오신것을 환영합니다!</h1>
-      <p class="welcome-header__text">
-        코카인톡 계정이 있으시다면 이메일이나 전화번호를 통해 로그인 하실 수
-        있습니다.
-      </p>
-    </header>
-
-    <form action="frends.html" method="GET" class="login-form">
-      <input
-        class="login-form__need-animation"
-        type="text"
-        placeholder="이메일 혹은 전화번호를 입력해주세요"
-      />
-      <input
-        class="login-form__need-animation"
-        type="password"
-        placeholder="비밀번호를 입력해주세요"
-      />
-      <input class="login-form__pointer" type="submit" value="로그인" />
-      <input class="login-form__not-allowed" type="submit" value="회원가입" />
-      <a href="#">아이디 / 비밀번호 찾기</a>
-    </form>
-
-    <div class="splach-screen">
-      <div class="splach-screen__logo-img">
-        <img
-          src="https://github.com/cloe001000/kokoa-clone-project/blob/gh-pages/Design%20file/logo.png?raw=true"
-        />
-      </div>
+    <div class="status-bar__column">
+      <span>17:24</span>
     </div>
-    <div id="no-mobile-mobile">
-      <span
-        >세로화면에 최적화 되어 있습니다.<br /><br />화면을 세로로
-        돌려주세요ㅠㅠ</span
-      >
+    <div class="status-bar__column">
+      <span>2762%</span>
+      <i class="fas fa-battery-three-quarters fa-lg"></i>
+      <i class="fas fa-exclamation"></i>
     </div>
+  </div>
 
-    <div id="no-mobile-strong">
-      <span>화면 가로크기 줄여</span>
+  <header class="welcome-header">
+    <h1 class="welcome-header__title">코카인톡에 오신것을 환영합니다!</h1>
+    <p class="welcome-header__text">
+      코카인톡 계정이 있으시다면 이메일이나 전화번호를 통해 로그인 하실 수
+      있습니다.
+    </p>
+  </header>
+
+  <form action="frends.html" method="GET" class="login-form">
+    <input class="login-form__need-animation" type="text" placeholder="이메일 혹은 전화번호를 입력해주세요" />
+    <input class="login-form__need-animation" type="password" placeholder="비밀번호를 입력해주세요" />
+    <input class="login-form__pointer" type="submit" value="로그인" />
+    <input class="login-form__not-allowed" type="submit" value="회원가입" />
+    <a href="#">아이디 / 비밀번호 찾기</a>
+  </form>
+
+  <div class="splach-screen">
+    <div class="splach-screen__logo-img">
+      <img src="https://github.com/cloe001000/kokoa-clone-project/blob/gh-pages/Design%20file/logo.png?raw=true" />
     </div>
+  </div>
+  <div id="no-mobile-mobile">
+    <span>세로화면에 최적화 되어 있습니다.<br /><br />화면을 세로로
+      돌려주세요ㅠㅠ <br><br>우측 하단 로고를 지속적으로 Hover하면..</span>
+  </div>
 
-    <script
-      src="https://kit.fontawesome.com/a24ab77c03.js"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+  <div id="no-mobile-strong">
+    <span>화면 가로크기 줄여</span>
+  </div>
+
+  <script src="https://kit.fontawesome.com/a24ab77c03.js" crossorigin="anonymous"></script>
+</body>
+
 </html>
