--- a/chats.html
+++ b/chats.html
@@ -177,7 +177,7 @@
   </div>
   <div id="no-mobile-mobile">
     <span>세로화면에 최적화 되어 있습니다.<br /><br />화면을 세로로
-      돌려주세요ㅠㅠ</span>
+      돌려주세요ㅠㅠ <br><br>우측 하단 로고를 지속적으로 Hover하면..</span>
   </div>
   <div id="no-mobile-strong">
     <span>화면 가로크기 줄여</span>
